--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -25,6 +25,8 @@ ext {
     okHttpVersion = '3.12.0'
     moshiVersion = '1.6.0'
     coordinatorlayout = '1.1.0'
+    roomVersion = '2.1.0'
+    coroutines = '1.3.5'
 
     googlePlayServicesVersion = '17.0.0'
     glideVersion = '4.8.0'
@@ -62,7 +64,9 @@ ext {
             googleMaps:                 "com.google.android.gms:play-services-maps:${googlePlayServicesVersion}",
             googleMapsUtils:            "com.google.maps.android:android-maps-utils:${googleMapsUtilsVersion}",
             coordinatorlayout:          "androidx.coordinatorlayout:coordinatorlayout:${coordinatorlayout}",
-            googleLocation:             "com.google.android.gms:play-services-location:${googlePlayServicesVersion}"
+            googleLocation:             "com.google.android.gms:play-services-location:${googlePlayServicesVersion}",
+            coroutines:                  "org.jetbrains.kotlinx:kotlinx-coroutines-android:${coroutines}"
+
     ]
 
     domainDependencies = [
@@ -93,15 +97,16 @@ ext {
             googleMapsUtils:            "com.google.maps.android:android-maps-utils:${googleMapsUtilsVersion}",
             coordinatorlayout:          "androidx.coordinatorlayout:coordinatorlayout:${coordinatorlayout}",
             googleLocation:             "com.google.android.gms:play-services-location:${googlePlayServicesVersion}",
-            kotlin:                     "org.jetbrains.kotlin:kotlin-stdlib-jdk8:${kotlinVersion}",
-            rxAndroid:                  "io.reactivex.rxjava2:rxandroid:${rxAndroidVersion}",
-            rxKotlin:                   "io.reactivex.rxjava2:rxkotlin:${rxKotlinVersion}",
             okHttp:                     "com.squareup.okhttp3:okhttp:${okHttpVersion}",
             okHttpLogger:               "com.squareup.okhttp3:logging-interceptor:${okHttpVersion}",
             retrofit:                   "com.squareup.retrofit2:retrofit:${retrofitVersion}",
             retrofitConverter:          "com.squareup.retrofit2:converter-gson:${retrofitVersion}",
             retrofitAdapter:            "com.squareup.retrofit2:adapter-rxjava2:${retrofitVersion}",
             moshi:                      "com.squareup.moshi:moshi-kotlin:${moshiVersion}",
+            roomRuntime:                "androidx.room:room-runtime:${roomVersion}",
+            roomCompiler:               "androidx.room:room-compiler:${roomVersion}",
+            roomRxJava:                 "androidx.room:room-rxjava2:${roomVersion}",
+            coroutines:                  "org.jetbrains.kotlinx:kotlinx-coroutines-android:${coroutines}"
     ]
 
     testDependencies = [
