--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -23,6 +23,7 @@
         </activity>
         <activity android:name=".view.OrdinaryCardChoiceActivity"/>
         <activity android:name=".view.WordsWritingActivity"/>
+        <activity android:name=".view.BindWordsActivity"/>
     </application>
 
 </manifest>
